kubernetes-from-scratch/manifests/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: default
  labels:
    app: web-server
spec:
  type: ClusterIP
  selector:
    app: web-server
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
