kubernetes-from-scratch/manifests/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
  namespace: default
  labels:
    app: web-server
spec:
  type: NodePort
  selector:
    app: web-server
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
